--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,21 @@
   text-decoration: none;
   display: block;
   align-items: center;
-  padding: 0px 30px;
+  padding: 0px 32px;
   color: #ffffff;
+  font-family: Raleway;
+}
+
+.navbar-links li:hover {
+  background-color: #4c4393;
+}
+
+.navbar-links li a {
+  font-size: 0.9rem;
+}
+
+.navbar-links li a:hover {
+  text-decoration: none;
 }
 
 .navbar-links {
@@ -11,16 +24,17 @@
 }
 
 .sidebar-panel {
-  background-color: #5d51c2;
+  background-color: #34495e;
 }
 
 .navbar-container {
   flex: 1;
-  background-color: #5d51c2;
+  background-color: #3e348c;
+  /* background-image: linear-gradient(#9ec14c, #41b14f); */
   left: 0;
   top: 0;
   right: auto;
-  min-height: 100%;
+  min-height: auto;
   overflow-y: auto;
   white-space: nowrap;
   z-index: 1;
@@ -30,7 +44,7 @@
 
 .logo-card {
   border: none !important;
-  background-color: #5d51c2 !important;
+  background-color: #382f82 !important;
 }
 
 .align-center {
@@ -39,7 +53,7 @@
 
 .navbar-links li a {
   color: #ffffff;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 .add-new {
@@ -60,4 +74,29 @@
 .add-new:hover {
   text-decoration: none;
   background-image: none;
+}
+
+.hoverIcon:hover {
+  border-left: 2px solid red;
+}
+
+.logo-text {
+  font-weight: 600;
+  padding: 0px 15px;
+  color: #ffffff;
+  display: inline-block;
+  vertical-align: middle;
+  margin-bottom: none;
+  font-family: Secular One;
+}
+
+.form-control {
+  font-weight: bold !important;
+  height: 35px !important;
+  padding: 6px 15px !important;
+  border-radius: 5px !important;
+  outline: none !important;
+  background: #f6f7f9 !important;
+  color: #748194 !important;
+  font-size: 14px !important;
 }
