--- a/src/styles.css
+++ b/src/styles.css
@@ -110,9 +110,16 @@
 }
 
 .sub-button {
-  border-radius: 0.15rem;
+  border-radius: 2px !important;
   font-family: Poppins, Secular One;
-  padding: 4px 14px !important;
+  padding: 11px 16px !important;
+  border-width: 1px !important;
+  color: #fff !important;
+  border-color: #f0134d !important;
+  background: #f0134d !important;
+  -webkit-box-shadow: 0px 10px 20px -6px rgb(0 0 0 / 12%);
+  -moz-box-shadow: 0px 10px 20px -6px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 10px 20px -6px rgb(0 0 0 / 12%);
 }
 
 .modal-header {
@@ -121,6 +128,10 @@
 
 .modal-body {
   padding-top: 0px !important;
+}
+
+.card-title {
+  margin-bottom: 0.45rem !important;
 }
 
 .sub-card {
