--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
   text-decoration: none;
   display: block;
   align-items: center;
-  padding: 0px 32px;
+  padding: 0rem 4rem;
   color: #9692cb;
   font-family: Raleway;
 }
@@ -132,11 +132,12 @@
 }
 
 .card-title {
-  margin-bottom: 0.45rem !important;
+  margin-bottom: 0rem !important;
 }
 
 .sub-card {
   padding: 0.8rem 1.25rem !important;
+  cursor: pointer;
 }
 
 .change-link {
