--- a/src/styles.css
+++ b/src/styles.css
@@ -13,12 +13,12 @@
 }
 
 .navbar-links li a {
-  color: #9692cb;
+  color: inherit;
   font-size: 0.9rem;
 }
 
 .navbar-links li a:hover {
-  color: #ffffff;
+  color: inherit;
   text-decoration: none;
 }
 
@@ -37,7 +37,7 @@
   left: 0;
   top: 0;
   right: auto;
-  min-height: auto;
+  /* min-height: auto; */
   overflow-y: auto;
   white-space: nowrap;
   z-index: 1;
@@ -82,7 +82,7 @@
 .logo-text {
   font-size: 1.75rem;
   font-weight: 600;
-  padding: 0px 15px;
+  padding: 0px 0px 0px 14px;
   color: #ffffff;
   display: inline-block;
   vertical-align: middle;
